# automate_browser

./: Cargo.toml  ocr_output.json  package-lock.json
src/: main.rs  ocr_output.json  ocr_processor.rs
