[package]
name = "automation_browser"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
base64 = "0.22"
thirtyfour = "0.35.0"
serde_json = "1.0.140"
walkdir = "2.5.0"
